--- a/dev/scss/base/_document.scss
+++ b/dev/scss/base/_document.scss
@@ -8,10 +8,10 @@ body {
   font-weight: 300;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
-  @include media-query($min, $small) {
+  @include media-query(hands) {
     font-size: 16px;
   }
-  @include media-query($min, $medium) {
+  @include media-query(lap) {
     font-size: 18px;
   }
 }
