--- a/dev/scss/components/_nav.scss
+++ b/dev/scss/components/_nav.scss
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   z-index: 3;
-  @include media-query($min, $siteWidth) {
+  @include media-query(desk) {
     position: relative;
     text-align: center;
   }
@@ -35,11 +35,11 @@
     border: 2px solid #fff;
     top: 60%;
   }
-  @include media-query($min, $small) {
+  @include media-query(hands) {
     width: 5.5em;
     height: 3.1em;
   }
-  @include media-query($min, $siteWidth) {
+  @include media-query(desk) {
     display: none !important;
   }
 }
@@ -51,10 +51,10 @@
   color: white;
   font-weight: bold;
   font-size: 1em;
-  @include media-query($min, $small) {
+  @include media-query(hands) {
     font-size: .75em;
   }
-  @include media-query($min, $siteWidth) {
+  @include media-query(desk) {
     display: none;
   }
 }
@@ -71,7 +71,7 @@
   height: auto;
   margin-bottom: 0;
   clear: both;
-  @include media-query($min, $siteWidth) {
+  @include media-query(desk) {
     display: block;
   }
 }
@@ -85,7 +85,7 @@
   }
   display: block;
   margin: 0;
-  @include media-query($min, $siteWidth) {
+  @include media-query(desk) {
     display: inline-block;
     &:not(:last-child) {
       border-bottom: none;
@@ -109,10 +109,10 @@
   &:active {
     background-color: scale-color($accent-color, $lightness: -30%);
   }
-  @include media-query($min, $small) {
+  @include media-query(hands) {
     font-size: 1em;
   }
-  @include media-query($min, $siteWidth) {
+  @include media-query(desk) {
     display: inline-block;
   }
 }
@@ -139,7 +139,7 @@
   background-color: scale-color($accent-color, $lightness: -10%);
   display: none;
   margin-bottom: 0;
-  @include media-query($min, $siteWidth) {
+  @include media-query(desk) {
     position: absolute;
   }
 }
@@ -149,7 +149,7 @@
   &:not(:last-child) {
     border-bottom: 1px solid scale-color($accent-color, $lightness: +5%);
   }
-  @include media-query($min, $siteWidth) {
+  @include media-query(desk) {
     display: block;
     text-align: left;
   }
@@ -173,7 +173,7 @@
   }
   font-weight: 400;
   padding-left: 1.5em;
-  @include media-query($min, $siteWidth) {
+  @include media-query(desk) {
     display: block;
     padding-left: 1em;
   }
