add inuit reset, normalize & box-sizing + quick adjustments

--- a/dev/scss/components/_header.scss
+++ b/dev/scss/components/_header.scss
@@ -89,7 +89,7 @@
     bottom: .75em;
     right: 1.25em;
     bottom: auto;
-    top: 32px;
+    top: 28px;
   }
 }
 .c-header__local-choice {
@@ -97,7 +97,7 @@
   width: 65px;
   height: 30px;
   margin: 0 auto;
-  padding: .2em;
+  padding: 0 .2em;
   background: transparent;
   -webkit-appearance: none;
   -moz-appearance: window;
