--- a/snippets/footer.liquid
+++ b/snippets/footer.liquid
@@ -22,7 +22,7 @@
             <input id="subscriberEmail" name="subscriber[email]" type="email" required="required">
           </div>
           <div class="o-form__submit">
-            <button class="o-button o-button--red has-icon" type="submit">
+            <button class="o-button o-button--has-icon c-button-color-red" type="submit">
               <i class="icon icon-check"></i> {{ "Valider" | t }}
             </button>
           </div>
