--- a/templates/contacts/form.liquid
+++ b/templates/contacts/form.liquid
@@ -80,7 +80,7 @@
           <textarea id="contactBody" name="message[body]"></textarea>
         </div>
         <div class="o-form__submit">
-          <button class="o-button o-button--red" type="submit">
+          <button class="o-button c-button-color-red" type="submit">
             {{ "Valider" | t }}
           </button>
         </div>
