--- a/templates/menus.liquid
+++ b/templates/menus.liquid
@@ -22,7 +22,7 @@
             {% endfor %}
           </ul>
           <div class="c-menu-preview__button">
-            <a class="o-button o-button--red" href="{{ menu.url }}">{{ "Voir les plats" | t }}</a>
+            <a class="o-button c-button-color-red" href="{{ menu.url }}">{{ "Voir les plats" | t }}</a>
           </div>
           {% unless forloop.last %}
             <hr class="c-menu-preview__separator">
