--- a/templates/newsletter/form.liquid
+++ b/templates/newsletter/form.liquid
@@ -21,7 +21,7 @@
           {% endunless %}
         </div>
         <div class="o-form__submit">
-          <button class="o-button o-button--red has-icon" type="submit">
+          <button class="o-button o-button--has-icon c-button-color-red" type="submit">
             <i class="icon icon-check"></i> {{ "Valider" | t }}
           </button>
         </div>
