--- a/templates/restaurant.liquid
+++ b/templates/restaurant.liquid
@@ -28,7 +28,7 @@
       {% google_business_view_embed: "size:100%x300" %}
       {% if theme_settings.display_google_business_view_url %}
         <div class="c-business-view__button">
-          <a class="o-button o-button--red" href="{% google_business_view_url %}">
+          <a class="o-button c-button-color-red" href="{% google_business_view_url %}">
             {{ "Visiter" | t }}
           </a>
         </div>
