--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -33,7 +33,7 @@
         {% endfor %}
       </div>
       <div class="c-simple-bloc__button">
-        <a class="o-button o-button--red" href="{{ restaurant.menus_path }}">
+        <a class="o-button c-button-color-red" href="{{ restaurant.menus_path }}">
           {{ "Voir toute la carte" | t }}
         </a>
       </div>
@@ -53,7 +53,7 @@
         {% endfor %}
       </div>
       <div class="c-simple-bloc__button">
-        <a class="o-button o-button--red" href="{{ restaurant.menus_path }}">
+        <a class="o-button c-button-color-red" href="{{ restaurant.menus_path }}">
           {{ "Voir toute la carte" | t }}
         </a>
       </div>
@@ -150,7 +150,7 @@
       </div>
     {% endif %}
     <div class="c-location__button">
-      <a class="o-button o-button--red" href="{% google_map_url %}">
+      <a class="o-button c-button-color-red" href="{% google_map_url %}">
         {{ "Voir l'itinéraire" | t }}
       </a>
     </div>
