--- a/dev/scss/base/_document.scss
+++ b/dev/scss/base/_document.scss
@@ -28,6 +28,10 @@ h4 { font-size: 1.25em; }
 h5 { font-size: 1em; }
 h6 { font-size: .9em; }
 
+a {
+  text-decoration: none;
+}
+
 img {
   max-width: 100%;
   height: auto;
@@ -49,4 +53,7 @@ li {
 
 fieldset {
   border: none;
+}
+input {
+  font-size: 16px;
 }
