--- a/snippets/footer.liquid
+++ b/snippets/footer.liquid
@@ -14,14 +14,14 @@
   </div>
 
   {% if theme_settings.footer_display_newsletter %}
-    <div class="o-form c-newsletter-form">
+    <div class="c-form c-newsletter-form">
       {% newsletter_subscribe_form %}
-        <fieldset class="o-form__field-group">
-          <div class="o-form__input">
-            <label class="o-form__label" for="subscriberEmail">{{ "Abonnez-vous à notre newsletter pour recevoir les dernières nouveautés du restaurant&nbsp;:" | t }}</label>
-            <input id="subscriberEmail" name="subscriber[email]" type="email" required="required">
+        <fieldset class="o-form">
+          <div class="o-form__field">
+            <label class="c-form__label" for="subscriberEmail">{{ "Abonnez-vous à notre newsletter pour recevoir les dernières nouveautés du restaurant&nbsp;:" | t }}</label>
+            <input id="subscriberEmail" class="c-form__input" name="subscriber[email]" type="email" required="required">
           </div>
-          <div class="o-form__submit">
+          <div class="o-form__field c-form__submit">
             <button class="o-button o-button--has-icon c-button-color-red" type="submit">
               <i class="icon icon-check"></i> {{ "Valider" | t }}
             </button>
