--- a/templates/contacts/form.liquid
+++ b/templates/contacts/form.liquid
@@ -56,30 +56,30 @@
     </div>
   </aside>
 
-  <section class="o-form c-contact-form">
-    <h1 class="o-form__title">{{ contact_settings.contact_title }}</h1>
-    <div class="o-form__description">
+  <section class="c-form c-contact-form">
+    <h1 class="c-form__title">{{ contact_settings.contact_title }}</h1>
+    <div class="c-form__description">
       {{ contact_settings.contact_content }}
     </div>
     {% contact_form %}
-      <fieldset class="o-form__field-group">
-        <div class="o-form__input">
-          <label class="o-form__label" for="contactFromName">{{ "Votre nom :" | t }}</label>
-          <input id="contactFromName" name="message[from_name]" type="text">
+      <fieldset class="o-form">
+        <div class="o-form__field">
+          <label class="c-form__label" for="contactFromName">{{ "Votre nom :" | t }}</label>
+          <input id="contactFromName" class="c-form__input" name="message[from_name]" type="text">
         </div>
-        <div class="o-form__input">
-          <label class="o-form__label" for="contactFromEmail">{{ "Votre adresse email :" | t }}</label>
-          <input id="contactFromEmail" name="message[from_email]" type="text">
+        <div class="o-form__field">
+          <label class="c-form__label" for="contactFromEmail">{{ "Votre adresse email :" | t }}</label>
+          <input id="contactFromEmail" class="c-form__input" name="message[from_email]" type="text">
         </div>
-        <div class="o-form__input">
-          <label class="o-form__label" for="contactPhone">{{ "Votre numéro de téléphone :" | t }}</label>
-          <input id="contactPhone" name="message[phone]" type="text">
+        <div class="o-form__field">
+          <label class="c-form__label" for="contactPhone">{{ "Votre numéro de téléphone :" | t }}</label>
+          <input id="contactPhone" class="c-form__input" name="message[phone]" type="text">
         </div>
-        <div class="o-form__textarea">
-          <label class="o-form__label" for="contactBody">{{ "Votre message :" | t }}</label>
-          <textarea id="contactBody" name="message[body]"></textarea>
+        <div class="o-form__field">
+          <label class="c-form__label" for="contactBody">{{ "Votre message :" | t }}</label>
+          <textarea id="contactBody" class="c-form__textarea" name="message[body]"></textarea>
         </div>
-        <div class="o-form__submit">
+        <div class="o-form__field c-form__submit">
           <button class="o-button c-button-color-red" type="submit">
             {{ "Valider" | t }}
           </button>
