--- a/templates/newsletter/form.liquid
+++ b/templates/newsletter/form.liquid
@@ -1,7 +1,7 @@
 {% newsletter_subscribe_form %}
   <div class="o-wrapper">
-    <section class="o-form c-newsletter-form">
-      <h1 class="o-form__title">{{ "Inscription à la newsletter" | t }}</h1>
+    <section class="c-form c-newsletter-form">
+      <h1 class="c-form__title">{{ "Inscription à la newsletter" | t }}</h1>
       {% unless form.created_successfully? %}
         <div class="c-message c-message--error">
           <p class="c-message__description">
@@ -10,21 +10,23 @@
           </p>
         </div>
       {% endunless %}
-      <fieldset class="o-form__field-group">
-        <div class="o-form__input">
-          <label class="o-form__label" for="subscriberEmail">{{ "Abonnez-vous à notre newsletter pour recevoir les dernières nouveautés du restaurant&nbsp;:" | t }}</label>
-          <input id="subscriberEmail" name="subscriber[email]" type="text" required="required">
+      <fieldset class="o-form">
+        <div class="o-form__field">
+          <label class="c-form__label" for="subscriberEmail">{{ "Abonnez-vous à notre newsletter pour recevoir les dernières nouveautés du restaurant&nbsp;:" | t }}</label>
+          <input id="subscriberEmail" class="c-form__input" name="subscriber[email]" type="text" required="required">
           {% unless form.created_successfully? %}
-            <div class="o-form__input-hint o-form__input-hint--error">
+            <div class="c-form__input-hint c-form__input-hint--error">
               {{ form.error }}
             </div>
           {% endunless %}
         </div>
-        <div class="o-form__submit">
+
+        <div class="o-form__field c-form__submit">
           <button class="o-button o-button--has-icon c-button-color-red" type="submit">
             <i class="icon icon-check"></i> {{ "Valider" | t }}
           </button>
         </div>
+
       </fieldset>
     </section>
   </div>
