--- a/snippets/header.liquid
+++ b/snippets/header.liquid
@@ -31,7 +31,7 @@
   {% if restaurant.phone? %}
     <div class="c-header__phone-number">
       <a class="c-header__phone-number-link" href="tel:{{ restaurant.phone_uri }}">
-        <i class="icon c-header__icon-phone"></i> <span class="c-header__phone-number-label">{{ restaurant.phone }}</span>
+        <i class="icon icon-phone"></i> <span class="c-header__phone-number-label">{{ restaurant.phone }}</span>
       </a>
     </div>
   {% endif %}
