transform simple-block component on an object

--- a/templates/404.liquid
+++ b/templates/404.liquid
@@ -1,13 +1,13 @@
 <div class="o-wrapper">
-  <section class="c-simple-bloc">
-    <h1 class="c-simple-bloc__title">{{ "Page introuvable" | t }}</h1>
+  <section class="o-simple-block">
+    <h1 class="o-simple-block__title">{{ "Page introuvable" | t }}</h1>
     <div class="c-message c-message--notice">
       <div class="c-message__description">
         <i class="icon icon-warning"></i> {{ "La page que vous avez demandée n'existe pas." | t }}
       </div>
     </div>
 
-    <div class="c-simple-bloc__button">
+    <div class="o-simple-block__button">
       <a class="o-button c-button-color-red" href="{{ localized_root_path }}">
         {{ "Retour à l'accueil" | t }}
       </a>
