--- a/templates/menus.liquid
+++ b/templates/menus.liquid
@@ -1,7 +1,7 @@
 <div class="o-wrapper">
-  <section class="c-simple-bloc">
-    <h1 class="c-simple-bloc__title">{{ "Notre carte" | t }}</h1>
-    <div class="c-simple-bloc__content">
+  <section class="o-simple-block">
+    <h1 class="o-simple-block__title">{{ "Notre carte" | t }}</h1>
+    <div class="o-simple-block__content">
       {% for menu in menus %}
         <div class="c-menu-preview">
           <a class="c-menu-preview__link" href="{{ menu.url }}">
