--- a/templates/restaurant.liquid
+++ b/templates/restaurant.liquid
@@ -1,8 +1,8 @@
 {% if restaurant.summary? %}
   <div class="o-wrapper">
-    <section class="c-simple-bloc">
-      <h1 class="c-simple-bloc__title">{{ "Le restaurant" | t }}</h1>
-      <div class="c-simple-bloc__content">
+    <section class="o-simple-block">
+      <h1 class="o-simple-block__title">{{ "Le restaurant" | t }}</h1>
+      <div class="o-simple-block__content">
         {{ restaurant.summary }}
       </div>
     </section>
