--- a/templates/terms.en.liquid
+++ b/templates/terms.en.liquid
@@ -1,6 +1,6 @@
 <div class="o-wrapper">
-  <section class="c-simple-bloc">
-    <h1 class="c-simple-bloc__title">Legal Disclaimer</h1>
+  <section class="o-simple-block">
+    <h1 class="o-simple-block__title">Legal Disclaimer</h1>
     <h2>Identification and Publication</h2>
     <h3>Publisher</h3>
     <p>
