--- a/templates/terms.fr.liquid
+++ b/templates/terms.fr.liquid
@@ -1,6 +1,6 @@
 <div class="o-wrapper">
-  <section class="c-simple-bloc">
-    <h1 class="c-simple-bloc__title">Mentions légales</h1>
+  <section class="o-simple-block">
+    <h1 class="o-simple-block__title">Mentions légales</h1>
     <h2>Identification et publication</h2>
     <h3>Éditeur</h3>
     <p>
