add title comments & summary - clean organisation scss

--- a/dev/scss/base/_document.scss
+++ b/dev/scss/base/_document.scss
@@ -1,3 +1,7 @@
+/*----------------------------------------------------------------------------*\
+    #Document base
+\*----------------------------------------------------------------------------*/
+
 html,
 body {
   color: $body-color;
