--- a/dev/scss/base/_fontcustom.scss
+++ b/dev/scss/base/_fontcustom.scss
@@ -1,6 +1,7 @@
-// ===========================================================================
-// #Icon Font: fontcustom
-// ===========================================================================
+/*----------------------------------------------------------------------------*\
+    #Icons Fontcustom
+\*----------------------------------------------------------------------------*/
+
 @font-face {
   font-family: "fontcustom";
   src: url("{{ 'fontcustom_1bdd1fe34d4892ef8fa376c54942299a.eot' |asset_url }}");
