--- a/dev/scss/components/_back-to-top.scss
+++ b/dev/scss/components/_back-to-top.scss
@@ -1,3 +1,7 @@
+/*----------------------------------------------------------------------------*\
+    #Back-to-top component
+\*----------------------------------------------------------------------------*/
+
 // Colors
 $color__back-to-top-text: {{ theme_settings.color-back-to-top-text }};
 $color__back-to-top-text--hover: {{ theme_settings.color-back-to-top-text--hover }};
