--- a/dev/scss/components/_banner.scss
+++ b/dev/scss/components/_banner.scss
@@ -1,3 +1,7 @@
+/*----------------------------------------------------------------------------*\
+    #Banner component
+\*----------------------------------------------------------------------------*/
+
 // Colors
 $color__banner-text: {{ theme_settings.color-banner-text }};
 
