--- a/dev/scss/components/_button.scss
+++ b/dev/scss/components/_button.scss
@@ -1,3 +1,7 @@
+/*----------------------------------------------------------------------------*\
+    #Button component
+\*----------------------------------------------------------------------------*/
+
 // Sizes
 .c-button-size-default {
   font-size: 16px;
