--- a/dev/scss/components/_contact-form.scss
+++ b/dev/scss/components/_contact-form.scss
@@ -1,3 +1,7 @@
+/*----------------------------------------------------------------------------*\
+    #Contact-form component
+\*----------------------------------------------------------------------------*/
+
 .c-contact-form {
   @include media-query(desk) {
     margin-left: ceil($siteWidth / 3) + $gutter;
