--- a/dev/scss/components/_food.scss
+++ b/dev/scss/components/_food.scss
@@ -1,3 +1,7 @@
+/*----------------------------------------------------------------------------*\
+    #Food component
+\*----------------------------------------------------------------------------*/
+
 // Colors
 $color__food-featured-background: {{ theme_settings.color-food-featured-background }};
 $color__default-tag-background: {{ theme_settings.color-default-tag-background }};
