--- a/dev/scss/components/_footer.scss
+++ b/dev/scss/components/_footer.scss
@@ -1,3 +1,7 @@
+/*----------------------------------------------------------------------------*\
+    #Footer component
+\*----------------------------------------------------------------------------*/
+
 .c-footer {
   margin-top: 1em;
   background-color: scale-color($body-color, $lightness: +95%);
