--- a/dev/scss/components/_form.scss
+++ b/dev/scss/components/_form.scss
@@ -1,3 +1,7 @@
+/*----------------------------------------------------------------------------*\
+    #Form component
+\*----------------------------------------------------------------------------*/
+
 // Colors
 $color__input-hint-error-background: {{ theme_settings.color-input-hint-error-background }};
 $color__input-hint-error-text: {{ theme_settings.color-input-hint-error-text }};
