--- a/dev/scss/components/_gallery.scss
+++ b/dev/scss/components/_gallery.scss
@@ -1,3 +1,7 @@
+/*----------------------------------------------------------------------------*\
+    #Gallery component
+\*----------------------------------------------------------------------------*/
+
 .c-gallery {
   margin-bottom: 1em;
 }
