--- a/dev/scss/components/_header.scss
+++ b/dev/scss/components/_header.scss
@@ -1,3 +1,7 @@
+/*----------------------------------------------------------------------------*\
+    #Header component
+\*----------------------------------------------------------------------------*/
+
 .c-header {
 }
 .c-header__identity {
