--- a/dev/scss/components/_menu.scss
+++ b/dev/scss/components/_menu.scss
@@ -1,3 +1,7 @@
+/*----------------------------------------------------------------------------*\
+    #Menu component
+\*----------------------------------------------------------------------------*/
+
 // Colors
 $color__menu-featured-background: {{ theme_settings.color-menu-featured-background }};
 
