--- a/dev/scss/components/_messages.scss
+++ b/dev/scss/components/_messages.scss
@@ -1,3 +1,7 @@
+/*----------------------------------------------------------------------------*\
+    #Messages component
+\*----------------------------------------------------------------------------*/
+
 // Colors
 $color__message-success-background: {{ theme_settings.color-message-success-background }};
 $color__message-success-text: {{ theme_settings.color-message-success-text }};
