--- a/dev/scss/components/_nav.scss
+++ b/dev/scss/components/_nav.scss
@@ -1,3 +1,7 @@
+/*----------------------------------------------------------------------------*\
+    #Nav component
+\*----------------------------------------------------------------------------*/
+
 .c-nav {
   position: absolute;
   top: 0;
