--- a/dev/scss/components/_news.scss
+++ b/dev/scss/components/_news.scss
@@ -1,3 +1,7 @@
+/*----------------------------------------------------------------------------*\
+    #News component
+\*----------------------------------------------------------------------------*/
+
 .c-news {
   margin: 1em auto 2em auto;
 }
