--- a/dev/scss/components/_newsletter-form.scss
+++ b/dev/scss/components/_newsletter-form.scss
@@ -1,3 +1,7 @@
+/*----------------------------------------------------------------------------*\
+    #Newsletter-form component
+\*----------------------------------------------------------------------------*/
+
 .c-newsletter-form {
   @include media-query(desk) {
     margin: 0 auto;
