--- a/dev/scss/components/_opening-info.scss
+++ b/dev/scss/components/_opening-info.scss
@@ -1,3 +1,7 @@
+/*----------------------------------------------------------------------------*\
+    #Opening-info component
+\*----------------------------------------------------------------------------*/
+
 .c-opening-info {
   background-color: #FFFFFF;
   margin-bottom: 1em;
