--- a/dev/scss/components/_thanks-form.scss
+++ b/dev/scss/components/_thanks-form.scss
@@ -1,3 +1,7 @@
+/*----------------------------------------------------------------------------*\
+    #Thanks-form component
+\*----------------------------------------------------------------------------*/
+
 .c-thanks-form {
   padding: 1em 0;
 }
