--- a/dev/scss/hacks/_grid.scss
+++ b/dev/scss/hacks/_grid.scss
@@ -1,3 +1,6 @@
+/*----------------------------------------------------------------------------*\
+    #Grid hack
+\*----------------------------------------------------------------------------*/
 .layout {
   overflow: hidden;
 }
