--- a/dev/scss/objects/_buttons.scss
+++ b/dev/scss/objects/_buttons.scss
@@ -1,3 +1,7 @@
+/*----------------------------------------------------------------------------*\
+    #Buttons object
+\*----------------------------------------------------------------------------*/
+
 .o-button {
   display: inline-block;
   vertical-align: middle;
