--- a/dev/scss/objects/_forms.scss
+++ b/dev/scss/objects/_forms.scss
@@ -1,6 +1,8 @@
-.o-form {
-  margin-bottom: .5em;
-}
+/*----------------------------------------------------------------------------*\
+    #Forms object
+\*----------------------------------------------------------------------------*/
+
+.o-form,
 .o-form__field {
   margin-bottom: .5em;
 }
