--- a/dev/scss/objects/_simple-block.scss
+++ b/dev/scss/objects/_simple-block.scss
@@ -1,3 +1,7 @@
+/*----------------------------------------------------------------------------*\
+    #Simple-blocks object
+\*----------------------------------------------------------------------------*/
+
 .o-simple-block {
   padding: 1em 0;
 }
