--- a/dev/scss/objects/_wrapper.scss
+++ b/dev/scss/objects/_wrapper.scss
@@ -1,3 +1,7 @@
+/*----------------------------------------------------------------------------*\
+    #Wrapper object
+\*----------------------------------------------------------------------------*/
+
 .o-wrapper {
   @include clearfix();
   position: relative;
