--- a/dev/scss/settings/_breakpoints.scss
+++ b/dev/scss/settings/_breakpoints.scss
@@ -1,3 +1,7 @@
+/*----------------------------------------------------------------------------*\
+    #Breakpoints settings
+\*----------------------------------------------------------------------------*/
+
 /**
 * @see http://www.sitepoint.com/sass-mixins-kickstart-project/#breakpoint-handler
 */
