--- a/dev/scss/settings/_colors.scss
+++ b/dev/scss/settings/_colors.scss
@@ -1,6 +1,7 @@
-// ===========================================================================
-// #Colors
-// ===========================================================================
+/*----------------------------------------------------------------------------*\
+    #Colors settings
+\*----------------------------------------------------------------------------*/
+
 $body-background: {{ theme_settings.body-background }};
 $body-color: {{ theme_settings.body-color }};
 $accent-color: {{ theme_settings.accent-color }};
