--- a/dev/scss/settings/_general.scss
+++ b/dev/scss/settings/_general.scss
@@ -1,10 +1,7 @@
-// ===========================================================================
-// #General Variables
-// ===========================================================================
+/*----------------------------------------------------------------------------*\
+    #General settings
+\*----------------------------------------------------------------------------*/
+
 /* Width variables */
 $siteWidth: 960px;
 $gutter: 24px;
-
-/* Typography */
-$headerFontStack: {{ theme_settings.header-font }};
-$bodyFontStack: {{ theme_settings.body-font }};
