--- a/dev/scss/tools/_mixins.scss
+++ b/dev/scss/tools/_mixins.scss
@@ -1,3 +1,8 @@
+/*----------------------------------------------------------------------------*\
+    #Mixins tools
+\*----------------------------------------------------------------------------*/
+
+
 @mixin clearfix() {
   &:after {
     content: "";
