--- a/dev/scss/components/_aside-info.scss
+++ b/dev/scss/components/_aside-info.scss
@@ -1,3 +1,7 @@
+/*----------------------------------------------------------------------------*\
+    #Aside-info component
+\*----------------------------------------------------------------------------*/
+
 .c-aside-info {
   @include media-query(desk) {
     float: left;
