--- a/dev/scss/components/_booking.scss
+++ b/dev/scss/components/_booking.scss
@@ -1,3 +1,7 @@
+/*----------------------------------------------------------------------------*\
+    #Booking component
+\*----------------------------------------------------------------------------*/
+
 .c-booking {
   text-align: center;
   padding-top: .5em;
