--- a/dev/scss/components/_custom-page.scss
+++ b/dev/scss/components/_custom-page.scss
@@ -1,3 +1,7 @@
+/*----------------------------------------------------------------------------*\
+    #Custom-page component
+\*----------------------------------------------------------------------------*/
+
 .c-custom-page {
   padding: 1em 0;
   ol, ul, dl {
