--- a/dev/scss/components/_location.scss
+++ b/dev/scss/components/_location.scss
@@ -1,3 +1,7 @@
+/*----------------------------------------------------------------------------*\
+    #Location component
+\*----------------------------------------------------------------------------*/
+
 .c-location {
   background-color: #fff;
   margin-bottom: 1em;
