--- a/dev/scss/components/_menu-preview.scss
+++ b/dev/scss/components/_menu-preview.scss
@@ -1,3 +1,7 @@
+/*----------------------------------------------------------------------------*\
+    #Menu-preview component
+\*----------------------------------------------------------------------------*/
+
 .c-menu-preview {
 }
 .c-menu-preview__link {
