create component tag

--- a/dev/scss/_summary.scss
+++ b/dev/scss/_summary.scss
@@ -47,6 +47,7 @@
  * Menu preview...................Menu preview component styles.
  * Menu...........................Menu component styles.
  * Food...........................Food component styles.
+ * Tag............................Tag component styles.
  * Back to top....................Back to top component styles.
  * News...........................News component styles.
  * Gallery........................Gallery component styles.
