refactor simple block object - move button center in button component

--- a/dev/scss/components/_button.scss
+++ b/dev/scss/components/_button.scss
@@ -2,6 +2,9 @@
     #Button component
 \*----------------------------------------------------------------------------*/
 
+.c-button--center {
+  text-align: center;
+}
 // Sizes
 .c-button-size-default {
   font-size: 16px;
