--- a/templates/404.liquid
+++ b/templates/404.liquid
@@ -7,7 +7,7 @@
       </div>
     </div>
 
-    <div class="o-simple-block__button">
+    <div class="c-button--center">
       <a class="o-button c-button-color-red" href="{{ localized_root_path }}">
         {{ "Retour à l'accueil" | t }}
       </a>
