--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -32,7 +32,7 @@
           </div>
         {% endfor %}
       </div>
-      <div class="o-simple-block__button">
+      <div class="c-button--center">
         <a class="o-button c-button-color-red" href="{{ restaurant.menus_path }}">
           {{ "Voir toute la carte" | t }}
         </a>
@@ -52,7 +52,7 @@
           {% include 'food' with food:food %}
         {% endfor %}
       </div>
-      <div class="o-simple-block__button">
+      <div class="c-button--center">
         <a class="o-button c-button-color-red" href="{{ restaurant.menus_path }}">
           {{ "Voir toute la carte" | t }}
         </a>
