remove components buttons center classes - use button center component class instead

--- a/snippets/footer.liquid
+++ b/snippets/footer.liquid
@@ -21,7 +21,7 @@
             <label class="c-form__label" for="subscriberEmail">{{ "Abonnez-vous à notre newsletter pour recevoir les dernières nouveautés du restaurant&nbsp;:" | t }}</label>
             <input id="subscriberEmail" class="c-form__input" name="subscriber[email]" type="email" required="required">
           </div>
-          <div class="o-form__field c-form__submit">
+          <div class="o-form__field c-button--center">
             <button class="o-button o-button--has-icon c-button-color-red" type="submit">
               <i class="icon icon-check"></i> {{ "Valider" | t }}
             </button>
