--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -149,7 +149,7 @@
         {% endif %}
       </div>
     {% endif %}
-    <div class="c-location__button">
+    <div class="c-button--center">
       <a class="o-button c-button-color-red" href="{% google_map_url %}">
         {{ "Voir l'itinéraire" | t }}
       </a>
