--- a/templates/menus.liquid
+++ b/templates/menus.liquid
@@ -21,7 +21,7 @@
               </li>
             {% endfor %}
           </ul>
-          <div class="c-menu-preview__button">
+          <div class="c-button--center">
             <a class="o-button c-button-color-red" href="{{ menu.url }}">{{ "Voir les plats" | t }}</a>
           </div>
           {% unless forloop.last %}
