--- a/templates/contacts/form.liquid
+++ b/templates/contacts/form.liquid
@@ -79,7 +79,7 @@
           <label class="c-form__label" for="contactBody">{{ "Votre message :" | t }}</label>
           <textarea id="contactBody" class="c-form__textarea" name="message[body]"></textarea>
         </div>
-        <div class="o-form__field c-form__submit">
+        <div class="o-form__field c-button--center">
           <button class="o-button c-button-color-red" type="submit">
             {{ "Valider" | t }}
           </button>
