--- a/templates/newsletter/form.liquid
+++ b/templates/newsletter/form.liquid
@@ -21,7 +21,7 @@
           {% endunless %}
         </div>
 
-        <div class="o-form__field c-form__submit">
+        <div class="o-form__field c-button--center">
           <button class="o-button o-button--has-icon c-button-color-red" type="submit">
             <i class="icon icon-check"></i> {{ "Valider" | t }}
           </button>
