add text-center utility

--- a/dev/scss/_summary.scss
+++ b/dev/scss/_summary.scss
@@ -64,6 +64,7 @@
  * UTILITIES (trumps)
  * Inuit widths................Default widths config INUIT-CSS.
  * Inuit responsive............Default responsive widths config INUIT-CSS.
+ * Text center.................Text center class utility.
  *
  * HACKS
  * Grid........................Grid hack for avoid white spaces HTML comments (INUIT-CSS Grid).
