base new responsive nav plugin installation

--- a/dev/scss/_summary.scss
+++ b/dev/scss/_summary.scss
@@ -28,6 +28,7 @@
  *
  * VENDORS
  * Venobox........................Venobox external plugin styles - lightbox.
+ * Responsive nav.................Responsive nav external plugin styles - Navigation.
  *
  * OBJECTS
  * Inuit layout...................Layout object for grid system, INUIT-CSS.
